--- a/scr/index.html
+++ b/scr/index.html
@@ -10,6 +10,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
+    <h1>MY Name Is Sonia Bauer from South-Africa </h1>
+    <h2>Residing in Bloemfontein Free-State</h2>
     
 </body>
 </html>
