--- a/scr/index.html
+++ b/scr/index.html
@@ -10,8 +10,16 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
+    <nav class="navbar" style="background-color: #e3f2fd;" data-bs-theme="light">
+  <!-- Navbar content -->
+</nav>
+<div class="main heading">
     <h1>MY Name Is Sonia Bauer from South-Africa </h1>
     <h2>Residing in Bloemfontein Free-State</h2>
+
+    </div>
+    <a href="about.hmtl"> About</a>
+    <a href="Contact.html">Contact</a>
     
 </body>
 </html>
