added a image to my homepage

--- a/scr/index.html
+++ b/scr/index.html
@@ -23,7 +23,7 @@
     <a href="Contact.html" class="btn btn-ligth">Contact</a>
     </div>
     
-<img src="" alt="image">
+<img src="my pic.jpg" alt=""> 
 
     </div>
 </div>
