--- a/scr/index.html
+++ b/scr/index.html
@@ -41,13 +41,13 @@
        <div class="container">
 
         <div class="row">
-        <div class="col-8">
-<img src="my pic.jpg"class="img-fluid rounded shadow-md p-2  border-20px"/>
+        <div class=" col-12">
+<img src="my pic.jpg"class="img-fluid rounded shadow-md p-2  border-20px d-flex "/>
         </div>
         </div>
-          <div class="col-6">   
-<p>Hi my name is Sonia Bauer from South South-Africa Im Residing in Bloemfontein Free-State
-    im from     Western-Cape im a mom off two and training to .jhchbjhvbhvjd .bhbhdbvbidisddjbugbuheinew .iefbiubyefbhdveugube. bdyfgeuibeh 
+          <div class="col-8">   
+<p>Hi my name is Sonia Bauer from South South-Africa Im Residing in Bloemfontein Free-State. <br>
+    Im from     Western-Cape im a mom off two </two>and training to .jhchbjhvbhvjd .bhbhdbvbidisddjbugbuheinew .iefbiubyefbhdveugube. bdyfgeuibeh 
 </div>  
   </div>
 
