fixed the about page home page ....

--- a/scr/about.html
+++ b/scr/about.html
@@ -11,10 +11,29 @@
 <link rel="stylesheet" href="style.css">
 </head>
 
+
 <body>
-  
+  <ul class="nav nav-pills">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="index.html">Home page</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="Contact.html">Contact page</a>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link" href="My projects.html">My Projects</a>
+  </li>
+</ul>
     <h1>ABOUT PAGE </h1>
-   
-    
+<div class="container">
+
+        <div class="row">
+        <div class=" col-6" >
+    <img src="my pic.jpg"class="img-fluid rounded shadow-md p-2  border-20px  center-img"/>
+   </div>
+        </div>
+        <div class="col-6">
+    <p>  my name is sonia bauer im from south africa jhyghjb hgnnuegdy   ygygxjgy  bdyugenuui   hceygeuh  buegei  ueu8e <br>egdy8ehy  deyyuiudedyeg dgeyguihueuiue egundeuyuhu gdyegduueeuhe <br>duegeyuwdhijhduwiuwud bhdeyuxbdgdfee bydghd7eue byegdyg dhuueheyde dj7geueedb  <br></p>
+        </div>
 </body>
 </html>
