--- a/scr/Contact.html
+++ b/scr/Contact.html
@@ -11,7 +11,18 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
+   <ul class="nav nav-pills">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="index.html">Home page</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="Contact.html">Contact Page</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="My projects.html">My projects</a>
+  </li>
+  
+</ul>
     <h1> Contact Me Page </h1>
     
 </body>
