--- a/scr/about.html
+++ b/scr/about.html
@@ -24,16 +24,16 @@
     <a class="nav-link" href="My projects.html">My Projects</a>
   </li>
 </ul>
-    <h1>ABOUT PAGE </h1>
+   
 <div class="container">
 
-        <div class="row">
-        <div class=" col-6" >
-    <img src="my pic.jpg"class="img-fluid rounded shadow-md p-2  border-20px  center-img"/>
+        
+    <img src="my pic.jpg"class="img-fluid rounded shadow-md p-2  border-20px"/>
    </div>
         </div>
-        <div class="col-6">
+          <h1 class="about-me">Who is Sonia Bauer </h1>
+        <div class="my-paragraph">
     <p>  my name is sonia bauer im from south africa jhyghjb hgnnuegdy   ygygxjgy  bdyugenuui   hceygeuh  buegei  ueu8e <br>egdy8ehy  deyyuiudedyeg dgeyguihueuiue egundeuyuhu gdyegduueeuhe <br>duegeyuwdhijhduwiuwud bhdeyuxbdgdfee bydghd7eue byegdyg dhuueheyde dj7geueedb  <br></p>
-        </div>
+    </div>
 </body>
 </html>
